--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
  
 {% load static %} 
+{% static 'img/reydelpollo.png' as DEFAULT_AVATAR %}
 {% load permisos_tags %}
 <!DOCTYPE html>
 <html lang="es-ar">
@@ -268,53 +269,54 @@
                     </li>
                 {% endif %}
                 </ul>
+                
+<!-- Perfil de usuario y autenticación -->
+<ul class="navbar-nav ms-auto">
+  {% if user.is_authenticated %}
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="userDropdown"
+       role="button" data-bs-toggle="dropdown" aria-expanded="false">
+      <div class="dropdown d-flex align-items-center">
+
+        <img
+          src="{% if user.imagen_usuario and user.imagen_usuario.name %}{{ user.imagen_usuario.url }}{% else %}{{ DEFAULT_AVATAR }}{% endif %}"
+          onerror="this.onerror=null;this.src='{{ DEFAULT_AVATAR }}';"
+          width="40" height="40"
+          class="rounded-circle me-2"
+          alt="Imagen de perfil">
+
+        <span>
+          {{ request.user.first_name|default:request.user.last_name|default:request.user.email|default:request.user.username }}
+        </span>
+      </div>
+    </a>
+
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+      <li><a class="dropdown-item" href="{% url 'apps.blog_auth:editar_usuario' user.pk %}">Modificar Perfil</a></li>
+      {% if user.is_staff %}
+      <li><a class="dropdown-item" href="{% url 'blog_auth:lista_usuarios' %}">Listado de Usuarios</a></li>
+      {% endif %}
+      <li>
+        <form method="post" action="{% url 'apps.blog_auth:cerrar_sesion' %}">
+          {% csrf_token %}
+          <button type="submit" class="dropdown-item">Cerrar sesión</button>
+        </form>
+      </li>
+    </ul>
+  </li>
+  {% else %}
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'apps.blog_auth:iniciar_sesion' %}" style="font-weight: bold; font-size: 18px;">
+      Iniciar Sesión
+    </a>
+  </li>
+  {% endif %}
+</ul>
 
 
-                <!-- Perfil de usuario y autenticación -->
-                <ul class="navbar-nav ms-auto">
-                    {% if user.is_authenticated %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="userDropdown"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <div class="dropdown">
-                                {% if user.imagen_usuario %}
-                                <img src="{{ user.imagen_usuario.url }}" alt="Imagen de perfil" width="40" height="40"
-                                    class="rounded-circle me-2">
-                                {% else %}
-                                <img src="{% static 'img/mundo.png' %}" alt="Imagen de perfil por defecto" width="40" height="40"
-                                    class="rounded-circle me-2">
-                                {% endif %}
-                                
-                                <span>
-                                {{ request.user.first_name|default:request.user.last_name|default:request.user.email|default:request.user.username }}
-                                </span>
-                                
-                            </div>
-                        </a>
 
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                            <li><a class="dropdown-item" href="{% url 'apps.blog_auth:editar_usuario' user.pk %}">Modificar Perfil</a></li>
 
-                            {% if user.is_staff %}
-                            <li> <a class="dropdown-item" href="{% url 'blog_auth:lista_usuarios' %}">Listado de Usuarios</a></li>
-                            {% endif %}
-                            <li>
-                            <form method="post" action="{% url 'apps.blog_auth:cerrar_sesion' %}">
-                                {% csrf_token %}
-                                <button type="submit" class="dropdown-item">Cerrar sesión</button>
-                            </form>
-                            </li>
-                        </ul>
-                   
-                    {% else %}
-                    
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'apps.blog_auth:iniciar_sesion' %}" style="font-weight: bold; font-size: 18px;">
-                            Iniciar Sesión
-                            </a>
-                        </li>
-                    {% endif %}
-                </ul>
+                
             </div>
         </div>
     </nav>
@@ -334,8 +336,6 @@
                     <a href="https://www.Facebook.com/" target="_blank" class="me-2">
                         <i class="bi bi-facebook fs-3 text-white"></i>
                     </a>
-                    <a href="https://twitter.com/" target="_blank">
-                        <i class="bi bi-twitter fs-3 text-white"></i>
                     </a>
                     <a href="https://twitter.com/" target="_blank">
                         <i class="bi bi-google fs-3 text-white"></i>
